--- a/development.env
+++ b/development.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 BD_HOST=ulearnet-db.cmfamk37bb89.sa-east-1.rds.amazonaws.com
-BD_USER=reim_ulearnet
-BD_PASSWORD=KsclS$AcSx.20Cv83xT
+BD_USER=ulearnet_test
+BD_PASSWORD=sGZ6ytr*HKfi
 BD_PORT=3306
