--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "pg": "^8.3.3",
     "prettier": "^2.2.1",
     "pug": "2.0.0-beta11",
-    "serverless-http": "^2.6.0"
+    "serverless-http": "^2.6.0",
+    "win-node-env": "^0.4.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
