--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.789.0",
+    "blob": "^0.1.0",
     "body-parser": "^1.19.0",
     "bree": "^3.3.0",
     "cabin": "^8.0.7",
@@ -38,5 +39,6 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.4"
+
   }
 }
